[gd_scene load_steps=9 format=3 uid="uid://mvalbebjx6bu"]

[ext_resource type="Script" uid="uid://tkqatcpj06gb" path="res://Scenes/TrainingProgram/parts/Cards/ScpMiniCard/scp_mini_card.gd" id="1_ca1ce"]
[ext_resource type="PackedScene" uid="uid://cggkdkq5crbw4" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardBody.tscn" id="2_5lpm0"]
[ext_resource type="PackedScene" uid="uid://ca1erh850s21g" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerContainmentInfo.tscn" id="3_4vkgm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n8iws"]

[sub_resource type="ViewportTexture" id="ViewportTexture_5lpm0"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vkgm"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.735717, 0.247227, 0.9, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8iws"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.735717, 0.247227, 0.9, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20tj0"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.735717, 0.247227, 0.9, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ScpMiniCard" type="PanelContainer"]
offset_right = 160.0
offset_bottom = 38.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_n8iws")
script = ExtResource("1_ca1ce")

[node name="CardBody" parent="." instance=ExtResource("2_5lpm0")]
layout_mode = 2
card_size = Vector2(275, 115)
border_color = Color(0.735717, 0.247227, 0.9, 1)

[node name="TextureRect" parent="CardBody" index="0"]
texture = SubResource("ViewportTexture_5lpm0")

[node name="SubViewport" parent="CardBody" index="1"]
size = Vector2i(275, 115)

[node name="CardBody" parent="CardBody/SubViewport/Control" index="0"]
custom_minimum_size = Vector2(275, 115)
offset_bottom = 115.0

[node name="PanelContainer" parent="CardBody/SubViewport/Control/CardBody/Front" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_4vkgm")

[node name="CardDrawerContainmentInfo" parent="CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="0" instance=ExtResource("3_4vkgm")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_n8iws")
is_left_side = true
border_color = Color(0.735717, 0.247227, 0.9, 1)

[node name="PanelContainer" parent="CardBody/SubViewport/Control/CardBody/Back" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_20tj0")

[editable path="CardBody"]
